<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagemCadastroImagemView"
        android:layout_width="203dp"
        android:layout_height="174dp"
        android:layout_gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/avatar" />

    <Button
        android:id="@+id/imgPerfilButton"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_camera"
        android:layout_gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:onClick="pegarImg"
        />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/usuarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:hint="@string/usuarioHint"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/senhaCadastroEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:hint="@string/senhaCadastroHint"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/senhaReCadastroEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:hint="@string/confirmarSenhaHint"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/finalizarCadastroButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonLogar"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:onClick="terminarCadastro"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:padding="12dp"
        android:text="@string/efetuarCadastroButton" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:src="@drawable/cadastro_back" />

</LinearLayout>