<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoarGato"
    android:orientation="vertical">

    <Button
        android:id="@+id/imgGatoButton"
        android:layout_width="47dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_menu_camera"
        android:layout_gravity="center"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:onClick="pegarImgGato"
        />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imagemCadastroImagemView"
        android:layout_width="203dp"
        android:layout_height="174dp"
        android:layout_gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:src="@drawable/avatar" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:padding="8dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/caracteristicas"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:padding="8dp"
        android:gravity="center"
        android:hint="@string/caracteristicasInput"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/efetuarCadastroButton"
        android:textColor="#FFFFFF"
        android:onClick="cadastrarGato"
        android:foreground="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/buttonLogar"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:src="@drawable/gatosdoar" />

</LinearLayout>